Fin de la encabezado principal

--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,42 @@
-h1 {
+body {
 
-	color: red;
+	background-image: url('principal.jpg');
+	background-repeat: no-repeat;
+	background-size: 1800px  1400px;
 }
+
+.top_menu ul
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+ 
+
+.top_menu ul li
+
+{
+    float: left;
+}
+
+.top_menu ul li a
+
+{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+.top_menu li a:hover {
+    background-color: #111;
+}
+
+
+
+
+
