--- a/estilo.css
+++ b/estilo.css
@@ -107,12 +107,44 @@ figure {
 }
 
 #aside1{
+	border: 2px solid #FFF8DC;
 	float:right;
 	width: 300px;
 	height: 930px;
-	background-color: black;
+	background-color: #FFF8DC;
 
 }
+
+
+
+#f1 {
+   border: 2px solid #FFF8DC;
+    padding: 5px;
+    width: 180px;
+}
+
+img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+#f2{
+	border: 2px solid #FFF8DC;
+    padding: 4px;
+    width: 220px;
+    height: 180px;
+    float:left;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
