--- a/estilo.css
+++ b/estilo.css
@@ -1,15 +1,26 @@
 /*EL DISEÑO DEL CUERPO DEL BLOG*/
 body 
 {
+	/*
 	background-image: url('principal.jpg');
 	background-repeat: no-repeat;
-	background-size: 1800px  1400px;
+	background-size: 1800px  1400px;*/
+/*EL FONDO DEL CUERPO DEL BLOG*/
+	background: #f3e2c7; /* Old browsers */
+	background: -moz-linear-gradient(top, #f3e2c7 4%, #c19e67 34%, #b68d4c 60%, #c19e67 75%, #e9d4b3 100%); /* FF3.6-15 */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(4%,#f3e2c7), color-stop(34%,#c19e67), color-stop(60%,#b68d4c), color-stop(75%,#c19e67), color-stop(100%,#e9d4b3)); /* Chrome4-9,Safari4-5 */
+	background: -webkit-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Chrome10-25,Safari5.1-6 */
+	background: -o-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Opera 11.10-11.50 */
+	background: -ms-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* IE10 preview */
+	background: linear-gradient(to bottom, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#e9d4b3',GradientType=0 ); /* IE6-9 */
 }
 /*EL DISEÑO DEL ENCABEZADO */
 .header
 {
 	font-family: 'Gloria Hallelujah', cursive;
 	font-size: 20px;
+	padding: 0px;
 }
 /*EL DISEÑO DEL BLOG*/
 .top_menu ul
