--- a/estilo.css
+++ b/estilo.css
@@ -21,8 +21,26 @@ body
 	font-family: 'Gloria Hallelujah', cursive;
 	font-size: 20px;
 	padding: 0px;
+	width: 100%
 }
 /*EL DISEÑO DEL MENU DE NAVEGACION*/
+#btn_menu
+{
+	display: none
+}
+header label
+{
+	display: none;
+	width: 30px;
+	height: 30px;
+	padding: 10px;
+	border-right: 1px solid #fff;
+}
+header label:hover
+{
+	cursor: pointer;
+	background: rgba(0, 0, 0, 0.3);
+}
 .top_menu ul 
 {
 	margin: 0;
@@ -38,8 +56,13 @@ body
 	background: linear-gradient(to bottom, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#e9d4b3',GradientType=0 ); /* IE6-9 */
 }
-.top_menu li:hover{
+.top_menu li:hover
+{
 	background: rgba(0, 0, 0, 0.3); 
+}
+.top_menu li
+{
+	border-right: 4px solid #fff;
 }
 .top_menu li a
 {
@@ -47,6 +70,44 @@ body
 	display: block;
 	padding: 15px 20px;
 	text-decoration: none;
+}
+
+@media (max-width: 768px)
+{
+	header label
+	{
+		display: block;
+	}
+	.top_menu
+	{
+		position: absolute;
+		background: #f3e2c7; /* Old browsers */
+		background: -moz-linear-gradient(top, #f3e2c7 4%, #c19e67 34%, #b68d4c 60%, #c19e67 75%, #e9d4b3 100%); /* FF3.6-15 */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(4%,#f3e2c7), color-stop(34%,#c19e67), color-stop(60%,#b68d4c), color-stop(75%,#c19e67), color-stop(100%,#e9d4b3)); /* Chrome4-9,Safari4-5 */
+		background: -webkit-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Chrome10-25,Safari5.1-6 */
+		background: -o-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Opera 11.10-11.50 */
+		background: -ms-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* IE10 preview */
+		background: linear-gradient(to bottom, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#e9d4b3',GradientType=0 ); /* IE6-9 */
+		width: 70%
+		transition: all 0.58;
+		margin-left: -70% 
+
+	}
+	.top_menu ul
+	{
+		flex-direction: column;
+	}
+	.top_menu li
+	{
+		border-top: 4px solid #fff;
+	}
+	#btn_menu:checked ~ .top_menu
+	{
+		margin: 0;
+	}
+
+	
 }
 .E1{
 	height: 5%
