--- a/estilo.css
+++ b/estilo.css
@@ -72,43 +72,6 @@ header label:hover
 	text-decoration: none;
 }
 
-@media (max-width: 768px)
-{
-	header label
-	{
-		display: block;
-	}
-	.top_menu
-	{
-		position: absolute;
-		background: #f3e2c7; /* Old browsers */
-		background: -moz-linear-gradient(top, #f3e2c7 4%, #c19e67 34%, #b68d4c 60%, #c19e67 75%, #e9d4b3 100%); /* FF3.6-15 */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(4%,#f3e2c7), color-stop(34%,#c19e67), color-stop(60%,#b68d4c), color-stop(75%,#c19e67), color-stop(100%,#e9d4b3)); /* Chrome4-9,Safari4-5 */
-		background: -webkit-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Chrome10-25,Safari5.1-6 */
-		background: -o-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Opera 11.10-11.50 */
-		background: -ms-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* IE10 preview */
-		background: linear-gradient(to bottom, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#e9d4b3',GradientType=0 ); /* IE6-9 */
-		width: 70%
-		transition: all 0.58;
-		margin-left: -70% 
-
-	}
-	.top_menu ul
-	{
-		flex-direction: column;
-	}
-	.top_menu li
-	{
-		border-top: 4px solid #fff;
-	}
-	#btn_menu:checked ~ .top_menu
-	{
-		margin: 0;
-	}
-
-	
-}
 .E1{
 	height: 5%
 	width: 5%
@@ -117,17 +80,21 @@ header label:hover
 #header
 {
 	margin:auto;
-	width:500px;
+	/*width:500px;*/
 	/* ORGANIZAR EL TEXTO A LA DERECHA --float: left;*/
-	 position:top:absolute
-	margin: auto;
-    width: 600px;
+	margin:auto;
     font-family: Arial, Helvetica, sans-serif;
+    width: 40%;
 }
 #ar1
 {
+	display: inline-block;
+	vertical-align: top;
 	border-style: groove;
 	background-color:#FFF8DC;	
+	box-shadow: 0px 0px 20px  #FFFFFF;
+	border-radius: 10px 20%;
+	
 }
 /*DISEÑO DE LAS IMAGENES DEL BLOG*/
 figure {
@@ -185,6 +152,51 @@ img:hover {
     width: 220px;
     height: 180px;
     float:left;
+}
+/*INICIO DE RESPONSIVE MEDIANO*/
+@media (max-width: 950px )
+{
+	/*MENU RESPONSIVE*/
+	header label
+	{
+		display: block;
+	}
+	.top_menu
+	{
+		position: absolute;
+		background: #f3e2c7; /* Old browsers */
+		background: -moz-linear-gradient(top, #f3e2c7 4%, #c19e67 34%, #b68d4c 60%, #c19e67 75%, #e9d4b3 100%); /* FF3.6-15 */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(4%,#f3e2c7), color-stop(34%,#c19e67), color-stop(60%,#b68d4c), color-stop(75%,#c19e67), color-stop(100%,#e9d4b3)); /* Chrome4-9,Safari4-5 */
+		background: -webkit-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Chrome10-25,Safari5.1-6 */
+		background: -o-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* Opera 11.10-11.50 */
+		background: -ms-linear-gradient(top, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* IE10 preview */
+		background: linear-gradient(to bottom, #f3e2c7 4%,#c19e67 34%,#b68d4c 60%,#c19e67 75%,#e9d4b3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#e9d4b3',GradientType=0 ); /* IE6-9 */
+		width: 70%
+		transition: all 0.58;
+		margin-left: -70% 
+
+	}
+	.top_menu ul
+	{
+		flex-direction: column;
+	}
+	.top_menu li
+	{
+		border-top: 4px solid #fff;
+	}
+	#btn_menu:checked ~ .top_menu
+	{
+		margin: 0;
+	}
+	/*FIN DEL MENU RESPONSIVE*/
+	/*INICIO DE LOS ARTICULOS DEL BLOG RESPONSIVE*/
+	#ar1
+	{
+		border-radius: 0px 0%;
+	}
+	/*FIN DEL MENU RESPONSIVE*/
+/*FIN DEL RESPONSIVE MEDIANO*/	
 }
 
 
